[package]
name = "process_killer"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "TUI to kill active process, without the need of finding the process id manually and then using the kill command"
readme = "README.md"
keywords = ["cli", "process kill", "tui", "tui process killer"]
categories = ["text-base-user-interface", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
sysinfo = "0.28.4"
tui = "0.19.0"

